--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "http-status": "^1.8.0"
+    "http-status": "^1.8.0",
+    "moment": "^2.30.1",
+    "paypal-rest-sdk": "^1.8.1",
+    "stripe": "^17.4.0"
   }
 }
